Fix double scroll problem on charts page

--- a/src/app/shared/layout/authenticated/authenticated.component.scss
+++ b/src/app/shared/layout/authenticated/authenticated.component.scss
@@ -1,6 +1,5 @@
 main {
   max-width: 60em;
-  overflow: auto;
 }
 
 mat-sidenav-container, mat-sidenav-content, mat-sidenav {
